--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -2,6 +2,7 @@ user nginx_http_user nginx_http_user;
 worker_processes auto;
 worker_cpu_affinity auto;
 error_log /data/logs/error_nginx.log crit;
+access_log /data/logs/access.log combined;
 worker_rlimit_nofile 51200;
 events {
     worker_connections 51200;
@@ -16,7 +17,7 @@ http {
 #open_file_cache_min_uses 2;
 #open_file_cache_errors on;
 ##########################vhost#####################################
-    include /data/sites_conf/*;
+    include /etc/nginx/sites-enabled/*;
     default_type application/octet-stream;
     server_names_hash_bucket_size 128;
     client_header_buffer_size 32k;
