update: 修改日志配置

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,13 +1,18 @@
 user nginx_http_user nginx_http_user;
 worker_processes auto;
 worker_cpu_affinity auto;
-error_log /data/logs/error_nginx.log crit;
-access_log /data/logs/access.log combined;
+error_log stderr warn;
 worker_rlimit_nofile 51200;
 events {
     worker_connections 51200;
 }
 http {
+    log_format  main_timed  '$remote_addr - $remote_user [$time_local] "$request" '
+                            '$status $body_bytes_sent "$http_referer" '
+                            '"$http_user_agent" "$http_x_forwarded_for" '
+                            '$request_time $upstream_response_time $pipe $upstream_cache_status';
+    error_log /data/logs/error_nginx.log warn;
+    access_log /data/logs/access_nginx.log combined;
     include mime.types;
     #If you have a lot of static files to serve through Nginx 
     #then caching of the files' metadata (not the actual files' contents) 
@@ -51,5 +56,10 @@ http {
         font/opentype application/x-font-ttf application/vnd.ms-fontobject
         image/x-icon;
     gzip_disable "msie6";
+    server {
+        listen 80;
+        location / {
+            return 200 "Server OK!";
+        }
+    }
 }
-daemon off;
