--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -59,6 +59,7 @@ http {
     server {
         listen 80;
         location / {
+            add_header Content-Type text/plain;
             return 200 "Server OK!";
         }
     }
