--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -7,7 +7,7 @@ events {
     worker_connections 51200;
 }
 http {
-    log_format  main_timed  '$remote_addr - $remote_user [$time_local] "$request" '
+    log_format  main_timed  '$remote_addr - $remote_user [$time_local] $http_host "$request" '
                             '$status $body_bytes_sent "$http_referer" '
                             '"$http_user_agent" "$http_x_forwarded_for" '
                             '$request_time $upstream_response_time $pipe $upstream_cache_status';
