--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -11,8 +11,8 @@ http {
                             '$status $body_bytes_sent "$http_referer" '
                             '"$http_user_agent" "$http_x_forwarded_for" '
                             '$request_time $upstream_response_time $pipe $upstream_cache_status';
-    error_log /var/log/nginx_error.log warn;
-    access_log /var/log/nginx_access.log combined;
+    error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log combined;
     include mime.types;
     #If you have a lot of static files to serve through Nginx 
     #then caching of the files' metadata (not the actual files' contents) 
