--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -7,12 +7,12 @@ events {
     worker_connections 51200;
 }
 http {
-    log_format  main_timed  '$remote_addr - $remote_user [$time_iso8601] $http_host "$request" '
+    log_format  main  '$remote_addr - $remote_user [$time_iso8601] $http_host "$request" '
                             '$status $body_bytes_sent "$http_referer" '
                             '"$http_user_agent" "$http_x_forwarded_for" '
                             '$request_time $upstream_response_time $pipe $upstream_cache_status';
     error_log /var/log/nginx/error.log warn;
-    access_log /var/log/nginx/access.log combined;
+    access_log /var/log/nginx/access.log main;
     include mime.types;
     #If you have a lot of static files to serve through Nginx 
     #then caching of the files' metadata (not the actual files' contents) 
