upd: 新增支持 nginx status

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -58,9 +58,13 @@ http {
     gzip_disable "msie6";
     server {
         listen 80;
+        server_name localhost;
         location / {
             add_header Content-Type text/plain;
             return 200 "Server OK!";
+        }
+        location /server-status {
+            stub_status on;
         }
     }
 }
