upd: 增加default_server 配置，默认host

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -57,7 +57,7 @@ http {
         image/x-icon;
     gzip_disable "msie6";
     server {
-        listen 80;
+        listen 80 default_server;
         server_name localhost;
         location / {
             add_header Content-Type text/plain;
