upd: 设置默认document type

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -11,8 +11,8 @@ http {
                             '$status $body_bytes_sent "$http_referer" '
                             '"$http_user_agent" "$http_x_forwarded_for" '
                             '$request_time $upstream_response_time $pipe $upstream_cache_status';
-    error_log /var/log/nginx/error.log warn;
-    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log.$year$month$day warn;
+    access_log /var/log/nginx/access.log.$year$month$day main;
     include mime.types;
     #If you have a lot of static files to serve through Nginx 
     #then caching of the files' metadata (not the actual files' contents) 
@@ -60,7 +60,7 @@ http {
         listen 80 default_server;
         server_name localhost;
         location / {
-            add_header Content-Type text/plain;
+            default_type text/plain;
             return 200 "Server OK!";
         }
         location /server-status {
