feat: 新增支持日志分割

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -11,8 +11,13 @@ http {
                             '$status $body_bytes_sent "$http_referer" '
                             '"$http_user_agent" "$http_x_forwarded_for" '
                             '$request_time $upstream_response_time $pipe $upstream_cache_status';
-    error_log /var/log/nginx/error.log.$year$month$day warn;
-    access_log /var/log/nginx/access.log.$year$month$day main;
+    map $time_iso8601 $logdate {
+        '~^(?<ymd>\d{4}-\d{2}-\d{2})' $ymd;
+        default                       'date-not-found';
+    }
+    error_log /var/log/nginx/error.log.$logdate warn;
+    access_log /var/log/nginx/access.log.$logdate main;
+    open_log_file_cache max=10;
     include mime.types;
     #If you have a lot of static files to serve through Nginx 
     #then caching of the files' metadata (not the actual files' contents) 
@@ -66,5 +71,6 @@ http {
         location /server-status {
             stub_status on;
         }
+        root /usr/share/nginx/html/default;
     }
 }
