--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
         default                       'date-not-found';
     }
     error_log /var/log/nginx/error.log.$logdate warn;
-    access_log /var/log/nginx/access.log.$logdate main;
+    access_log /var/log/nginx/access.log.$logdate combined;
     open_log_file_cache max=10;
     include mime.types;
     #If you have a lot of static files to serve through Nginx 
@@ -65,12 +65,17 @@ http {
         listen 80 default_server;
         server_name localhost;
         location / {
-            default_type text/plain;
-            return 200 "Server OK!";
+            root /usr/share/nginx/html/default;
         }
         location /server-status {
             stub_status on;
         }
-        root /usr/share/nginx/html/default;
+        error_page  404 403 500 502 503 504  /404.html;
+        location = /404.html {
+            # 放错误页面的目录路径。
+            root   /usr/share/nginx/html/default;
+            default_type text/plain;
+            return 404 "<h1>Error 404 Not Found :-(</h1>";
+        }
     }
 }
