upd: 调整默认的nginx 文件目录为 /etc/nginx/html

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -65,7 +65,7 @@ http {
         listen 80 default_server;
         server_name localhost;
         location / {
-            root /usr/share/nginx/html/default;
+            root /etc/nginx/html;
         }
         location /server-status {
             stub_status on;
@@ -73,7 +73,7 @@ http {
         error_page  404 403 500 502 503 504  /404.html;
         location = /404.html {
             # 放错误页面的目录路径。
-            root   /usr/share/nginx/html/default;
+            root   /etc/nginx/html;
             default_type text/plain;
             return 404 "<h1>Error 404 Not Found :-(</h1>";
         }
