fix: 修正access_log format 指定不正确的问题

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -15,8 +15,8 @@ http {
         '~^(?<ymd>\d{4}-\d{2}-\d{2})' $ymd;
         default                       'date-not-found';
     }
-    error_log /var/log/nginx/error.log.$logdate warn;
-    access_log /var/log/nginx/access.log.$logdate combined;
+    error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log.$logdate main;
     open_log_file_cache max=10;
     include mime.types;
     #If you have a lot of static files to serve through Nginx 
