--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -7,12 +7,11 @@ on:
     branches: [ master ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag woaiso/docker-tengine:$GITHUB_REF
+      run: |
+        docker login -u ${{secrets.DOCKERHUB_USER}} -p ${{secrets.DOCKERHUB_TOKEN}}
+        docker build . --file Dockerfile --tag woaiso/docker-tengine:$GITHUB_REF --tag woaiso/docker-tengine:latest
