--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Build the Docker image
       run: |
         docker login -u ${{secrets.DOCKERHUB_USER}} -p ${{secrets.DOCKERHUB_TOKEN}}
-        docker build . --file Dockerfile --tag woaiso/docker-tengine:$GITHUB_REF --tag woaiso/docker-tengine:latest
+        docker build . --file Dockerfile --tag woaiso/docker-tengine:latest
